--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
 .container {
@@ -8,6 +9,7 @@
   align-items: center;
   justify-content: center;
   background: lightgray;
+  height: 100vh;
 }
 
 article {
@@ -50,10 +52,38 @@ img {
   overflow-x: hidden;
 }
 
+button {
+  border: none;
+  font-size: 3rem;
+}
+
+/* Data Style */
+
 h3 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
 }
 
 p {
-  padding-left: 0.5rem;
-  padding-bottom: 1rem;
+  font-size: 1.15rem;
+  font-weight: 500;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+p:last-child {
+  justify-items: center;
+}
+
+span {
+  margin-left: 2rem;
+  font-weight: 400;
+  margin-right: 2rem;
+  font-size: 0.75rem;
 }
