--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ article {
   flex-direction: column;
   justify-content: flex-start;
   background: white;
+
   transition: 0.5s;
 }
 
@@ -97,4 +98,48 @@ span {
   font-weight: 400;
   margin-right: 2rem;
   font-size: 0.75rem;
+}
+
+.convert {
+  background-color: white;
+  width: 5rem;
+  height: 1rem;
+  color: black;
+  font-weight: 600;
+  border-radius: 10px;
+  border: 1px solid;
+  text-align: center;
+}
+
+.convert:hover {
+  background-color: blue;
+  color: white;
+  transform: scale(1.7);
+  transition: 0.6s;
+}
+
+@keyframes slide {
+  from {
+    transform: translate(0);
+  }
+
+  to {
+    transform: translate(-300px, -200px) scale(0.2);
+    opacity: 0.2;
+  }
+}
+.super {
+  animation: slide 0.7s linear forwards;
+}
+
+/* Transition Country */
+
+v-enter-active,
+v-leave-active {
+  transition: opacity 1s ease;
+}
+
+v-enter-from,
+v-leave-to {
+  opacity: 0;
 }
