--- a/style.css
+++ b/style.css
@@ -170,13 +170,39 @@ span {
   position: absolute;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .results {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
+
+select {
+  margin-top: 2rem;
+  border: none;
+  width: 4rem;
+  border-radius: 20px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1rem;
+  opacity: 0.5;
+}
+
+h4 {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+
+  position: relative;
+}
+
+.output-text {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
